# tyf-authorship-apparatus

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  TYF-manifesto-and-architecture.md  UPDATING.md  VALIDATION.md  fbs.yaml  gemini-extension.json  package.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.opencode/: INSTALL.md
author-context/: AGENTS.md  GEMINI.md
cowork/: PROJECT_INSTRUCTIONS.md  SCHEDULED_TASKS.md  SETUP.md
docs/: ATTENTIVENESS.md  CODEX_HOOKS.sample.toml  CODEX_MCP_CONFIG.sample.toml  COMPARISON_SUPERPOWERS.md  CONTINUITY_ENGINE_20X_REVIEW.md  CONTINUITY_REVIEW.md  FIRST_SITTING_REHEARSAL.md  GRAPH_CONCEPT_REVIEW_NEXT.md  GRAPH_PROJECTION_AND_LEDGER_AUDIT.md  LEARN_PASS.md  PORTABILITY.md  RC_20X_CODE_CRITIQUE_LOG.md  RC_ARCHITECTURE_CONTRACTS_3X.md  RC_ARCHITECTURE_RED_TEAM.md  RC_GAP_CLOSURE.md  RC_POLISH_AND_DECISIONS.md  RELEASE_READINESS.md  START_HERE.md  STORAGE_CONTRACT.md  TYF_FOUNDATION.md  WORKBENCH_ADVERSARIAL_PRODUCT_CRITIQUE_POST_PR5.md  WORKBENCH_EXTERNAL_CRITIQUE_COUNCIL.md  WORKBENCH_IMPLEMENTATION_PLAN.md  WORKBENCH_NEXT_SLICE_REVIEW.md  WORKBENCH_PROTOTYPE_REVIEW.md  WORKBENCH_REALTIME_SLICE_REVIEW.md  WORKBENCH_TARGET_STATE.md  WORKBENCH_TWO_WAY_MACHINERY.md  WORKBENCH_V06_IMPLEMENTATION.md  WORKSPACE_CONTRACT.md  WRITING_TYF_SKILLS.md  release-roadmap.md
scripts/: install.ps1  install.sh  tyf.py  tyf_architecture_contracts.py  tyf_codex_approvals.py  tyf_codex_bridge.py  tyf_codex_bridge_v07.py  tyf_codex_hook.py  tyf_codex_hook_validate.py  tyf_codex_schema.py  tyf_concept_review.py  tyf_polish_review.py  (+14 more)
(+90 files in other folders)
