[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tyf-authorship-apparatus"
version = "0.5.0"
description = "TYF: a faithful apparatus for authorship. The author is the source; TYF never becomes the writer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["authorship", "writing", "editing", "voice", "skills"]

# Installs the zero-dependency helper as the `tyf` command:
#   pipx install .        # or: pip install .
# Workspace commands (init, new-work, write, doctor, notice, ...) are
# CWD-relative and work anywhere once installed. `tyf check` inspects the pack
# itself, so run it from a repo clone or set TYF_PACK_ROOT to one.
[project.scripts]
tyf = "tyf:main"
tyf-workbench = "tyf_workbench_live:main"
tyf-graph = "tyf_graph_projection:main"
tyf-concept-review = "tyf_concept_review:main"
tyf-continuity-review = "tyf_continuity_review:main"
tyf-continuity-decision = "tyf_continuity_decision:main"
tyf-polish-review = "tyf_polish_review:main"
tyf-recovery = "tyf_recovery:main"
tyf-rc-doctor = "tyf_rc_doctor:main"

[tool.setuptools]
py-modules = [
  "tyf",
  "tyf_workbench_v06",
  "tyf_workbench_live",
  "tyf_workbench_status",
  "tyf_workbench_mcp",
  "tyf_codex_bridge",
  "tyf_codex_bridge_v07",
  "tyf_codex_hook",
  "tyf_codex_hook_validate",
  "tyf_codex_schema",
  "tyf_codex_approvals",
  "tyf_graph_projection",
  "tyf_concept_review",
  "tyf_continuity_review",
  "tyf_continuity_decision",
  "tyf_polish_review",
  "tyf_recovery",
  "tyf_rc_doctor",
]

[tool.setuptools.package-dir]
"" = "scripts"
